rename analyze dir from huffman to obst

--- a/public/obst/index.html
+++ b/public/obst/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Huffman Tree Filtering Engine Result with Locality</title>
+        <title>Optimal Binary Search Tree Filtering Engine Result with Locality</title>
         <style>
 .node circle {
     fill: #fff;
@@ -22,6 +22,6 @@
     <body>
         <!-- load the d3.js library -->
         <script src="http://d3js.org/d3.v3.min.js"></script>
-        <script src="huffman_locality.js"></script>
+        <script src="obst_locality.js"></script>
     </body>
 </html>
